TWINS-575: refactor Rules and Conditions (#735)
* TWINS-575: refactor Rules and Conditions

* TWINS-575: fixes

* TWINS-575: refactor after code review

* TWINS-575: fix rule delete

* TWINS-575: rules load method simplify

* TWINS-575: refactor after code review

* TWINS-575: update migration

* TWINS-575: refactor after code review

* TWINS-575: add Condition create controller

* TWINS-574: introduced TwinClassFieldConditionTreeCreateDTOv1 and updated conditions field in TwinClassFieldRuleCreateDTOv1

* TWINS-575: DTO fix

---------

Co-authored-by: nikita.mekh <n.mekh@hutkigrosh.by>